RbA Build/src/objects/Financial_Transaction__c.object
<CustomObject>
    <description>Object to store financial transaction records</description>
    <fields>
        <fullName>Credit_Account_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the account number to credit in this financial transaction</description>
        <inlineHelpText>Select the account number to credit in this financial transaction</inlineHelpText>
        <label>Credit Account Number</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only account numbers related to this financial transaction&apos;s store location can be selected.</errorMessage>
            <filterItems>
                <field>Financial_Account_Number__c.Store_Configuration__c</field>
                <operation>equals</operation>
                <valueField>$Source.Store_Configuration__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Account_Number__c</referenceTo>
        <relationshipLabel>Financial Transactions Credit</relationshipLabel>
        <relationshipName>Financial_Transactions_Credit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Debit_Account_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the account number to debit in this financial transaction</description>
        <inlineHelpText>Select the account number to debit in this financial transaction</inlineHelpText>
        <label>Debit Account Number</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only account numbers related to this financial transaction&apos;s store location can be selected.</errorMessage>
            <filterItems>
                <field>Financial_Account_Number__c.Store_Configuration__c</field>
                <operation>equals</operation>
                <valueField>$Source.Store_Configuration__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Account_Number__c</referenceTo>
        <relationshipLabel>Financial Transactions Debit</relationshipLabel>
        <relationshipName>Financial_Transactions_Debit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The description of this financial transaction.</description>
        <inlineHelpText>The description of this financial transaction.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Store_Configuration__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The store configuration this transaction is related to</description>
        <inlineHelpText>The store configuration this transaction is related to</inlineHelpText>
        <label>Store Configuration</label>
        <referenceTo>Store_Configuration__c</referenceTo>
        <relationshipLabel>Financial Transactions</relationshipLabel>
        <relationshipName>Financial_Transactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>Select the transaction type for this record. This will determine when these accounts will be debited/credited.</description>
        <inlineHelpText>Select the transaction type for this record. This will determine when these accounts will be debited/credited.</inlineHelpText>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc Sub-Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc Cash Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc Reimbursement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Financial Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FT-{00000}</displayFormat>
        <label>Financial Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>